--- a/client/package.json
+++ b/client/package.json
@@ -21,14 +21,17 @@
     "framer-motion": "^11.15.0",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.469.0",
+    "primereact": "^10.9.1",
     "react": "^18.3.1",
     "react-awesome-button": "^7.0.5",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.2",
+    "react-use-measure": "^2.1.1",
     "socket.io-client": "^4.8.1",
-    "styled-components": "^6.1.13",
+    "styled-components": "^6.1.14",
     "tailwind-merge": "^2.5.5",
     "yup": "^1.6.1",
     "zod": "^3.24.1"
@@ -58,6 +61,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@eslint/js": "^9.17.0",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
