--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,13 @@
   "description": "",
   "dependencies": {
     "@awaismirza/bypass-cors": "^1.1.2",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.7.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.7",
     "socket.io": "^4.8.1"
   }
